objects/Benefit_Header_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Header_Detail_Name__c</fullName>
        <label>Benefit Header Detail Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Header_Id__c</fullName>
        <label>Benefit Header Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Benefit Header Details</relationshipLabel>
        <relationshipName>Benefit_Header_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Benefit Header Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Header Details</pluralLabel>
    <recordTypes>
        <fullName>Benefit_Header_Detail</fullName>
        <active>true</active>
        <label>Benefit Header Detail</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>